--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section class="first">
+      <div class="place">
+        <img src="../lab-css-instagram-clone/images/phones.png" alt="Phones">
+      </div>
+
+      <div class="second place">
+        <div class="logos">
+          <img class="insta" src="../lab-css-instagram-clone/images/brand.png" alt="Brand">
+          <div class="login">
+            <a href="#">
+              <img class="home" src="../lab-css-instagram-clone/images/home.png" alt="Home">Log in</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="frame" src="images/frame.png" alt="Frame">
+          <h1 class="title">Capture and Share the World's Moments</h1>
+          <div class="text">
+            <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b>way to share your life <br> with
+             friends and family</p>
+             <p>Take a picture or video, choose a filter to transform its look <br> and feel, then post to Instagram
+               &mdash; it's that easy. You can <br> even share to Facebook, Twitter, Tumblr and more. It's a <br> new way to see the world.</p>
+               <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="download">
+            <a href="#">
+              <img src="images/badge-iphone.png" alt="Badge Iphone">
+            </a> 
+            <a href="#">
+              <img src="images/badge-android.png" alt="Badge Android">
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <nav>
+        <ul class="list">
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">Api</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li class="lighter">&copy; 2014 Instagram</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
