--- a/index.html
+++ b/index.html
@@ -4,13 +4,42 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="background"></div>
+      <img src="./images/phones.png" alt="a picture of two phones" id="phones">
+      <div class="right">
+        <div class="top">
+          <img src="./images/brand.png" alt="Instagram" id="brand">
+          <button><img src="./images/home.png" alt="Log in">Log in</button>
+        </div>
+        <article>
+          <h3>Capture and Share<br>the World's Moments</h3>
+          <span>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+        friends and family.</span>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+        &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <span>Oh yeah, did we mention it's free?</span>
+        </article>
+        <div class="bottom">
+          <img src="./images/badge-iphone.png" alt="download on iphone.">
+          <img src="./images/badge-android.png" alt="download on android.">
+        </div>
+      </div>
+    </main>
+    <footer>
+    <ul>
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+    </ul>
+    <p>&copy; 2014 Instagram</p></footer>
   </body>
 </html>
