--- a/index.html
+++ b/index.html
@@ -4,13 +4,82 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
+
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+
+
+
+      <div id="phone">
+        <img src="images/phones.png" alt="phones">
+      </div>
+
+      <!-- start of the box -->
+
+    <div class="box"> 
+      <div class="login">
+        <div id="logo">
+          <img src="images/brand.png" alt="logo">
+        </div>
+      </div>
+
+        <div class="button">
+          <button><img src="images/home.png" alt="home"> Login</button>
+        </div>
+
+      <h1>
+        Capture and Share the World's Moments 
+      </h1>
+
+      <div class="centerTxt">
+          <p>
+            Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free? 
+          </p>
+      </div>
+
+      <div id="badge">
+        <img id="apple" src="images/badge-iphone.png" alt="badge-iphone">
+        <img id="andriod" src="images/badge-android.png" alt="badge-android">
+      </div>
+    </div>
+
+    <!-- end of box -->
+
+
+
+
+
+
+
+    
+
+    <footer> 
+      <div>
+        <nav>
+          <ul>
+            <li><a href="#">About Us</a> </li>
+            <li><a href="#">Support</a> </li>
+            <li><a href="#">Blog</a> </li>
+            <li><a href="#">Press</a> </li>
+            <li><a href="#">API</a> </li>
+            <li><a href="#">Jobs</a> </li>
+            <li><a href="#">Privacy</a> </li>
+            <li><a href="#">Terms</a> </li>
+          </ul>
+        <p>&copy; 2014 Instagram</p>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
+
