--- a/index.html
+++ b/index.html
@@ -4,13 +4,57 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div id="page-contain">
+    <div id="banner"></div>
+    <div id="float-holder">
+      <div id="float-content">
+        <div id="phones"></div>
+        <div  id="f-right">
+          <div id="f-right-head">
+            <div id="insta-img"></div>
+            <div id="log-in">
+              <div id="home-icon"></div>
+              <span>Log in</span>
+            </div>
+          </div>
+          <div id="body-frame">
+            <div id="body-contain">
+              <div id="body-head">
+                Capture and Share <br>the World's Moments
+              </div>
+              <div id="body-content">
+                <p>
+                  Instagram is a <b>fast , beautiful </b>and <b>fun</b> way to share your life with friends and family.
+                </p>
+                Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                <p>
+                  Oh yeah, did we mention it's free?
+                </p>
+              </div>
+              <div id="badge-contain">
+                <div id="apple"></div>
+                <div id="android"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <a class="footer-link">ABOUT US</a>
+          <a class="footer-link">SUPPORT</a>
+          <a class="footer-link">BLOG</a>
+          <a class="footer-link">PRESS</a>
+          <a class="footer-link">API</a>
+          <a class="footer-link">JOBS</a>
+          <a class="footer-link">PRIVACY</a>
+          <a class="footer-link">TERMS</a>
+          <div id="copyright-tag">&copy; 2014 Instagram</div>
+        </footer>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
