Make background and center footer and some elements

--- a/index.html
+++ b/index.html
@@ -4,13 +4,58 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="blue-bg"></div>
+    <div class="main-div flex-row">
+
+      <section class="s1-phones">
+        <img src="./images/phones.png" alt="Phones">
+      </section>
+
+      <section class="s2-text">
+
+        <header class="header">
+          <img src="./images/brand.png" alt="Instagram Logo">
+          <button class="login-button"> <img src="./images/home.png" alt="home">Log in</button>
+        </header>
+
+        <section class="s2-section">
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          <br>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+          &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          <br>
+          Oh yeah, did we mention it's free?
+        </p>
+
+          <div>
+            <img src="./images/badge-iphone.png" alt="App Store Logo">
+            <img src="./images/badge-android.png" alt="Google Play Logo">
+          </div>
+        </section>
+      </section>
+    </div>
+
+    <footer class="main-footer">
+      <ul class="footer-ul flex-row">
+        <li><a href="#aboutus"></a> ABOUT US</li>
+        <li> <a href="#support"></a> SUPPORT</li>
+        <li> <a href="#blog"></a> BLOG</li>
+        <li> <a href="#press"></a> PRESS</li>
+        <li> <a href="#api"></a> API</li>
+        <li> <a href="#jobs"></a> JOBS</li>
+        <li> <a href="#privacy"></a> PRIVACY</li>
+        <li> <a href="#terms"></a> TERMS</li>
+      </ul>
+
+      <span>&copy; 2014 Instagram</span>
+
+    </footer>
+      
   </body>
 </html>
