--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <section id="main">
+
+      <section id="left-side">
+        <img src="images/phones.png">
+      </section>
+
+      <section id="right-side">
+        <article class="right-side-top">
+          <img src="images/brand.png">
+          <button class="button" type="button">Log in</button>
+        </article>
+        <article class="right-side-text">
+          <img src class="test-img">
+          <h2>Capture and share <br> the World's moments</h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+            friends and family. </b>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
+        </article>
+        <article class="right-side-icons">
+          <img src="images/badge-iphone.png">
+          <img src="images/badge-android.png">
+        </article>
+      </section>
+    </section>
   </body>
+
+  <footer>
+    <nav class="nav">
+      <a href="#">ABOUT US</a href>
+      <a href="#">SUPPORT</a href>
+      <a href="#">BLOG</a href>
+      <a href="#">PRESS</a href>
+      <a href="#">API</a href>
+      <a href="#">JOBS</a href>
+      <a href="#">PRIVACY</a href>
+      <a href="#">TERMS</a href>
+      <p>&#169 2014 INSTAGRAM</p>
+    </nav>
+  </footer>
 </html>
