--- a/index.html
+++ b/index.html
@@ -9,51 +9,54 @@
 </head>
 
 <body>
-<section>
-<main>
-  <article>
-    <div class="container">
-      <div class="box box-1">
-        <img src="images/phones.png" alt="phones">
-      </div>
-      <div class="box box-2">
-        <div class="top">
-          <img src="images/brand.png" alt="brand">
-          <button><img src="images/home.png" alt=""><span>Log In</span></button>
-        </div>
-        <div class="bottom">
-          <div class="container">
-            <h1>Capture and Share the World's Moments</h1>
-            <p>Instagram is a fast, beautiful and fun way to share your life with
-              friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-              Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play</p>
-              <div class="app-buttons">
-                <img src="images/badge-iphone.png" alt="iphone app">
-                <img src="images/badge-android.png" alt="android app">
+  <section>
+    <main>
+      <article>
+        <div class="container">
+          <div class="box box-1">
+            <img src="images/phones.png" alt="phones">
+          </div>
+          <div class="box box-2">
+            <div class="top">
+              <img src="images/brand.png" alt="brand">
+              <button><img src="images/home.png" alt=""><span>Log In</span></button>
+            </div>
+            <div class="bottom">
+              <div class="container">
+                <h1>Capture and Share the World's Moments</h1>
+                <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to
+                  share your life with
+                  friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+                  &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to
+                  see the world.</p>
+                <p>Oh yeah, did we mention it's free?</p>
+                <div class="app-buttons">
+                  <img src="images/badge-iphone.png" alt="Download on the App Store">
+                  <img src="images/badge-android.png" alt="Get it on Google Play">
+                </div>
               </div>
+            </div>
           </div>
         </div>
+      </article>
+    </main>
+    <footer>
+      <div class="container">
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li><span>&copy; 2014 Instagram</span></li>
+        </ul>
       </div>
-    </div>
-  </article>
-</main>
-<footer>
-  <div class="container">
-    <ul>
-      <li>About Us</li>
-      <li>Support</li>
-      <li>Blog</li>
-      <li>Press</li>
-      <li>API</li>
-      <li>Jobs</li>
-      <li>Privacy</li>
-      <li>Terms</li>
-      <li><span>&copy; 2014 Instagram</span></li>
-    </ul>
-  </div>
-</footer>
-</section>
+    </footer>
+  </section>
 </body>
 
 </html>
