Add HTML structure

--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Instagram Clone</title>
+		<!-- don't forget to link your styles -->
+	</head>
+	<body>
+		<main>
+			<div id="phones">
+				<img src="/images/phones.png" alt="Phones" />
+			</div>
+			<div id="main-seciton">
+				<div id="logos">
+					<img src="/images/brand.png" alt="IG Logo" />
+					<div id="home-btn">
+						<img src="/images/home.png" alt="Home icon" />
+						<p>Log in</p>
+					</div>
+				</div>
+				<div id="features">
+					<h2>Capture and Share the World's Moments</h2>
+					<p>
+						Instagram is a fast, beautiful and fun way to share your life with friends and family.
+						Take a picture or video, choose a filter to transform its look and feel, then post to
+						Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
+						more. It's a new way to see the world. Oh yeah, did we mention it's free?
+					</p>
+					<div id="stores-badges">
+						<img src="/images/badge-iphone.png" alt="Badge Iphone" />
+						<img src="/images/badge-android.png" alt="Badge Android" />
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<ul id="footer-list">
+				<li>ABOUT US</li>
+				<li>SUPPORT</li>
+				<li>BLOG</li>
+				<li>PRESS</li>
+				<li>API</li>
+				<li>JOBS</li>
+				<li>PRIVACY</li>
+				<li>TERMS</li>
+			</ul>
+			<p id="copyright">&copy; 2014 Instagram</p>
+		</footer>
+	</body>
 </html>
