Make last CSS ajustments

--- a/index.html
+++ b/index.html
@@ -19,25 +19,28 @@
 
         <header class="header">
           <img src="./images/brand.png" alt="Instagram Logo">
-          <button class="login-button"> <img src="./images/home.png" alt="home">Log in</button>
+          <button class="login-button"><img class="house-logo" src="./images/home.png" alt="home">Log in</button>
         </header>
 
         <section class="s2-section">
           <h2>Capture and Share the World's Moments</h2>
-          <p>Instagram is a fast, beautiful and fun way to share your life with
+          <p>Instagram is a <b>fast, beautiful </b>and <b>fun</b>  way to share your life with
             friends and family.
+          <br>
           <br>
           Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
           <br>
+          <br>
           Oh yeah, did we mention it's free?
         </p>
 
-          <div>
+          <div class="icons">
             <img src="./images/badge-iphone.png" alt="App Store Logo">
             <img src="./images/badge-android.png" alt="Google Play Logo">
           </div>
         </section>
+        
       </section>
     </div>
 
