--- a/index.html
+++ b/index.html
@@ -4,32 +4,33 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Instagram Clone</title>
-		<!-- don't forget to link your styles -->
+		<link rel="stylesheet" href="/styles/style.css">
 	</head>
 	<body>
 		<main>
 			<div id="phones">
 				<img src="/images/phones.png" alt="Phones" />
 			</div>
-			<div id="main-seciton">
+			<div id="main-section">
 				<div id="logos">
 					<img src="/images/brand.png" alt="IG Logo" />
-					<div id="home-btn">
-						<img src="/images/home.png" alt="Home icon" />
+					<a id="home-btn">
+						<img id="home-icon" src="/images/home.png" alt="Home icon" />
 						<p>Log in</p>
-					</div>
+					</a>
 				</div>
 				<div id="features">
 					<h2>Capture and Share the World's Moments</h2>
 					<p>
-						Instagram is a fast, beautiful and fun way to share your life with friends and family.
+						Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
+						<br><br>
 						Take a picture or video, choose a filter to transform its look and feel, then post to
 						Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
-						more. It's a new way to see the world. Oh yeah, did we mention it's free?
+						more. It's a new way to see the world. <br><br>Oh yeah, did we mention it's free?
 					</p>
 					<div id="stores-badges">
-						<img src="/images/badge-iphone.png" alt="Badge Iphone" />
-						<img src="/images/badge-android.png" alt="Badge Android" />
+						<img class="badges" src="/images/badge-iphone.png" alt="Badge Iphone" />
+						<img class="badges" src="/images/badge-android.png" alt="Badge Android" />
 					</div>
 				</div>
 			</div>
@@ -45,7 +46,7 @@
 				<li>PRIVACY</li>
 				<li>TERMS</li>
 			</ul>
-			<p id="copyright">&copy; 2014 Instagram</p>
+			<p id="copyright">&copy; 2014 INSTAGRAM</p>
 		</footer>
 	</body>
 </html>
