style: Make responsive and Add button effects

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Instagram Clone</title>
-		<link rel="stylesheet" href="/styles/style.css">
+		<link rel="stylesheet" href="/styles/style.css" />
 	</head>
 	<body>
 		<main>
@@ -22,15 +22,25 @@
 				<div id="features">
 					<h2>Capture and Share the World's Moments</h2>
 					<p>
-						Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.
-						<br><br>
+						Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with
+						friends and family. <br /><br />
 						Take a picture or video, choose a filter to transform its look and feel, then post to
 						Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and
-						more. It's a new way to see the world. <br><br>Oh yeah, did we mention it's free?
+						more. It's a new way to see the world. <br /><br />Oh yeah, did we mention it's free?
 					</p>
 					<div id="stores-badges">
-						<img class="badges" src="/images/badge-iphone.png" alt="Badge Iphone" />
-						<img class="badges" src="/images/badge-android.png" alt="Badge Android" />
+						<a
+							href="https://itunes.apple.com/app/instagram/id389801252?pt=428156&ct=igweb.loginPage.badge&mt=8&vt=lo"
+							target="_blank"
+						>
+							<img class="badges" src="/images/badge-iphone.png" alt="Badge Iphone" />
+						</a>
+						<a
+							href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=utm_source%3Dinstagramweb%26utm_campaign%3DloginPage%26ig_mid%3D53371DD8-5906-40F5-AA34-7391EF2C0A54%26utm_content%3Dlo%26utm_medium%3Dbadge"
+							target="_blank"
+						>
+							<img class="badges" src="/images/badge-android.png" alt="Badge Android" />
+						</a>
 					</div>
 				</div>
 			</div>
