minor corrections made i.e font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="./styles/style.css"
+    
   </head>
   <body>
 
@@ -29,7 +30,7 @@
     <div class="text-right-container">
       <div class="text">
         <h1>Capture and Share the World's Moments</h1>
-        <section>Instagram is a fast, beautiful and fun way to share your life with
+        <section>Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to share your life with
           friends and family.</section>
         <section>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
           &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</section>
