--- a/index.html
+++ b/index.html
@@ -3,14 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div id="background"></div>
+    <main>
+      <img src="./images/phones.png" alt="phones" id="phones" />
+      <section id="right-sec">
+        <div id="top-right">
+          <img src="images/brand.png" /><button>
+            <img src="images/home.png" /><span>Log in</span>
+          </button>
+        </div>
+        <div id="white-block">
+          <div id="white-block-shadow"></div>
+          <h2>
+            Capture and Share<br />
+            the World's Moments
+          </h2>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and
+            <strong>fun</strong> way to share your life with friends and
+            family.<br /><br />Take a picture or video, choose a filter to
+            transform its look and feel, then post to Instagram &mdash; it's
+            that easy. You can even share to Facebook, Twitter, Tumblr and more.
+            It's a new way to see the world.<br /><br />Oh yeah, did we mention
+            it's free?
+          </p>
+          <div id="store-badges">
+            <img src="./images/badge-iphone.png" alt="iphone-badge" /><img
+              src="./images/badge-android.png"
+              alt="android-badge"
+            />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <ul>
+        <li><a href="#">About Us</a></li>
+        <li><a href="#">Support</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Press</a></li>
+        <li><a href="#">API</a></li>
+        <li><a href="#">Jobs</a></li>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><p>&copy; 2014 Instagram</p></li>
+      </ul>
+    </footer>
   </body>
 </html>
