--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+<div class="contenedor">
+  <div class="contenedor-moviles">
+    <img src="/images/phones.png" alt="phones">
+  </div>
+  <div class="contenedor-texto">
+    <div class="logo">
+      <img src="/images/brand.png" alt="logo">
+      <button> <div><img src="/images/home.png" alt="icono home"></div> <div>Log in</div></button>
+    </div>
+    <div class="texto">
+      <h2>Capture and Share the World's Moments</h2> 
+    Instagram is a fast, beautiful and fun way to share your life with
     friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
     &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    Oh yeah, did we mention it's free?</div>
+    <div class="apps">
+      <div>
+        <img src="/images/badge-iphone.png" alt="Iphone app">
+      </div>
+      <div>
+        <img src="/images/badge-android.png" alt="Android app">
+      </div>
+    </div>
+  </div>
+</div>
+<footer>
+
+  <a href="">ABOUT US</a>
+  <a href="">SUPPORT</a>
+  <a href="">BLOG</a>
+  <a href="">PRESS</a>
+  <a href="">API</a>
+  <a href="">JOBS</a>
+  <a href="">PRIVACY</a>
+  <a href="">TERMS</a>
+  <div>&copy; 2014 Instagram</div>    
+       
+</footer>
+
+
+    
   </body>
 </html>
