--- a/index.html
+++ b/index.html
@@ -4,43 +4,53 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    <div>
-      <img src="images/phones.png" alt="Phones image">
-      <a href="https://www.instagram.com/" target="_blank">
-        <img src="images/brand.png" alt="Instagram logo">
-      </a>
-      <a href="https://www.instagram.com/accounts/login/" target="_blank">
-        <img src="images/home.png" alt="Home icon">
-        Log in
-      </a></div>
-    <div>
-      <article>
-        <h2>Capture and Share the World's Moments</h2>
-        <p>
-          Instagram is a fast, beautiful and fun way to share your life with
-          friends and family.
-        </p>
-        <p>
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram "&mdash;"" it's that easy.
-          You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-        </p>
-        <p>
-          Oh yeah, did we mention it's free?
-        </p>
-        <div>
-          <a href="https://apps.apple.com/us/app/instagram/id389801252" target="_blank">
-            <img src="images/badge-iphone.png" alt="IOS App store download link image">
+    <div class="top">
+      <p> </p>
+    </div>
+    <div class="bottom">
+      <p> </p>
+    </div>
+    <div class="main-section">
+      <img class="smartphones" src="images/phones.png" alt="Phones image">
+      <div class="info">
+        <div class="logo-login">
+          <a class="logo-login logo" href="https://www.instagram.com/" target="_blank">
+            <img src="images/brand.png" alt="Instagram logo">
           </a>
-          <a href="https://play.google.com/store/apps/details?id=com.instagram.android" target="_blank">
-            <img src="images/badge-android.png" alt="Android Google Play download link image">
+          <a class="login" href="https://www.instagram.com/accounts/login/" target="_blank">
+            <img src="images/home.png" alt="Home icon">
+            Log in
           </a>
         </div>
-      </article>
+        <article class="info-text">
+          <h2>Capture and Share<br/>the World's Moments</h2>
+          <p>
+            Instagram is a <strong>fast</strong>, <strong>beautiful</strong> 
+            and <strong>fun</strong> way to share your life with
+            friends and family.
+          </p>
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+            You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+          <div class="download">
+            <a href="https://apps.apple.com/us/app/instagram/id389801252" target="_blank">
+              <img src="images/badge-iphone.png" alt="IOS App store download link image">
+            </a>
+            <a href="https://play.google.com/store/apps/details?id=com.instagram.android" target="_blank">
+              <img src="images/badge-android.png" alt="Android Google Play download link image">
+            </a>
+          </div>
+        </article>
+      </div>
     </div>
-    <footer>
+    <footer class="footer">
       <ul>
         <a href="#">About Us</a>
         <a href="#">Support</a>
@@ -50,8 +60,8 @@
         <a href="#">Jobs</a>
         <a href="#">Privacy</a>
         <a href="#">Terms</a>
-        <span>&copy; 2014 Instagram</span>
       </ul>
+      <span id="registered">&copy; 2014 Instagram</span>
     </footer>
   </body>
 </html>
