--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
           <p>Oh yeah, did we mention it's free?</p>
           <div class="download">
             <img src="/images/badge-iphone.png" alt="download-apple">
-          </div>
-          <div>
             <img src="/images/badge-android.png" alt="download-android">
           </div>
         </div>
@@ -61,9 +59,9 @@
           <li>JOBS</li>
           <li>PRIVACY</li>
           <li>TERMS</li>
-          <li>&copy; 2014 Instagram</li>
+          <li style="color:	#A9A9A9">&copy; 2014 Instagram</li>
         </ul>
       </footer>
-      
+
   </body>
 </html>
