--- a/index.html
+++ b/index.html
@@ -4,13 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
+<link rel="stylesheet" href="styles/style.css">  </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <div class="blue">
+
+    </div>
+   <div class="divide">
+    <aside class="left"><img src="images/phones.png" alt="phones img"></aside>
+    <div class="rigth">
+      <div class="rigth-up">
+        <img src="images/brand.png" alt="Instagram Logo">
+        <div class="log-in">
+          <img src="images/home.png" alt="Home" style="height:50% ;" >
+          <h3>Log in</h3>
+        </div>
+      </div>
+        <div class="rigth-down">
+          <div class="text-box">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>  
+            <div class="stores">
+              <img src="images/badge-iphone.png" alt="App Store">
+              <img src="images/badge-android.png" alt="Google Play">
+            </div>
+        </div>
+    </div>
+  </div>  
+  <footer>
+    <ul class="link-list">
+    <li>About Us</li>
+    <li>Support</li>
+    <li>Blog</li>
+    <li>Press</li>
+    <li>API</li>
+    <li>Jobs</li>
+    <li>Privacy</li>
+    <li>Terms</li>
+    <li style="color:rgb(160, 160, 160)">&copy; 2014 Instagram</li>
+  </ul>
+               
+  </footer>
   </body>
 </html>
