--- a/index.html
+++ b/index.html
@@ -4,13 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link href="./styles/style.css" rel="stylesheet" type="" />
     <!-- don't forget to link your styles -->
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+   
+   <main>
+     <img src="./images/phones.png" title="Get instagram for your phone" />
+    <section><header> <img src="./images/brand.png" alt="Instagram. Share your pictures" /><nav><img src="./images/home.png" alt="home" /><a href="#">Log in</a></nav> </header>
+    <article>
+    <h1>Capture and Share the World's Moments</h1>
+    <p> Instagram is a <strong> fast, beautiful and fun</strong> way to share your life with
+    friends and family.</p>
+    <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p> 
+    <nav class="download"><a href="#"><img src="./images/badge-iphone.png" alt="Download on the App Store" /></a>  <a href="" ><img src="images/badge-android.png" alt="Get it on Google Play" /></a></nav>
+   
+    </article>
+   </section> </main>
+   
+    <footer> <nav><ul><li><a href="#">About Us</a></li> <li><a href="#">Support</a></li> <li><a href="#">Blog</a></li> <li><a href="#">Press</a></li> <li><a href="#">API</a></li> <li><a href="#">Privacy</a></li> <li><a href="#">Terms</a></li><li> &copy; 2014 Instagram</li></ul></nav></footer>
   </body>
 </html>
