--- a/index.html
+++ b/index.html
@@ -5,12 +5,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header></header>
+
+    <main>
+      <img class="phones" src="images/phones.png"/>
+
+      <div class="content">
+        <div class="menu">
+          <img src="images/brand.png"/>
+
+          <a class="btn">
+            <img src="images/home.png"/>
+            Log in
+          </a>
+        </div>
+
+        <div class="description">
+          <h2>
+            Capture and Share the World's Moments
+          </h2>
+
+          <p>
+            Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
+            friends and family.
+          </p>
+
+          <p>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+          </p>
+
+          <p>
+            Oh yeah, did we mention it's free?
+          </p>
+
+          <div class="app-links">
+            <img src="images/badge-iphone.png"/>
+            <img src="images/badge-android.png" />
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <a>ABOUT US</a>
+      <a>SUPPORT</a>
+      <a>BLOG</a>
+      <a>PRESS</a>
+      <a>API</a>
+      <a>JOBS</a>
+    </footer>
   </body>
 </html>
+
