--- a/index.html
+++ b/index.html
@@ -4,13 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
+    <link rel="stylesheet" href="./styles/style.css">
     <!-- don't forget to link your styles -->
   </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+  <body class="">
+    <div class="bgtile">
+      <img src="./images/bgtile.png" alt="">
+    </div>
+    <div class="container">
+      <div class="phones">
+        <img src="./images/phones.png" alt="phones">
+      </div>
+      <div class="stack-info cont-elem">
+        <div class="stack-header">
+          <ul>
+            <li>
+              <img src="./images/brand.png" alt="">
+            </li>
+            <li>
+              <button><img src="./images/home.png" alt=""><span>Log in</span></button>
+            </li>
+          </ul>
+        </div>
+        <div class="stack-detail cont-elem">
+          <h1>Capture and Share the World's Moments</h1>
+          <article>
+            <strong></strong>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+            &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+          </article>
+          <ul>
+            <li><img src="./images/badge-iphone.png" alt=""></li>
+            <li><img src="./images/badge-android.png" alt=""></li>
+          </ul>
+        </div>
+
+      </div>
+    </div>
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li id="insta-copyright">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
   </body>
 </html>
