--- a/index.html
+++ b/index.html
@@ -1,16 +1,73 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+
+    <section>
+
+        <div class="l-section">
+          <img src="images/phones.png" alt="Phones">
+        </div>
+
+
+        <div class="r-section">
+          <div class="nav-bar">
+
+            <a href="index.html">
+              <img src="images/brand.png" alt="Instagram" >
+            </a>
+
+            <a href="#" class="log-btn">
+              <img src="images/home.png" alt="Home Logo">
+              <p>Log In</p>
+            </a>
+
+          </div>
+
+          <article>
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with
+              friends and family.
+            </p> 
+
+            <p>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
+              &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+            </p>
+
+            <p>
+              Oh yeah, did we mention it's free?
+            </p>
+
+            <div class="badges">
+              <a href="#"><img src="images/badge-iphone.png" alt="badge Iphone"></a>
+              <a href="#"><img src="images/badge-android.png" alt="badge Android"></a>
+            </div>
+
+          </article>
+        </div>
+
+  </section>
+
+  <footer>
+    <ul class="ig-footer">
+      <li>About Us</li>
+      <li>Support</li>
+      <li>Blog</li>
+      <li>Press</li>
+      <li>API</li>
+      <li>Jobs</li>
+      <li>Privacy</li>
+      <li>Terms</li>
+      <li>&copy; 2014 InstagramE</li>
+    </ul>
+
+  </footer>
   </body>
 </html>
