--- a/index.html
+++ b/index.html
@@ -4,13 +4,56 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
+<!--
+  
+-->
+
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <section>
+        <img src="images/phones.png" alt="phones" />
+      </section>
+
+      <section>
+        <aside>
+          <img src="images/brand.png" alt="brand"/>
+
+          <button type="button">
+            <img src="images/home.png" alt="home icon" /><b>Log in</b>
+          </button>
+        </aside>
+
+        <aside>
+          <h2>Instagram Capture and Share the World's Moments</h2>
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br/>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br/> 
+            Oh yeah, did we mention it's free? </p>
+        </aside>
+
+        <aside>
+          <img src="images/badge-iphone.png" alt="badge phone"/>
+          <img src="images/badge-android.png" alt="badge andoid"/>
+        </aside>
+      </section>
+    </main>
+    
+    <section>
+      <nav>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs </li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </nav>
+
+      <p>&copy; 2014 Instagram</p>
+    </section>
   </body>
 </html>
