--- a/index.html
+++ b/index.html
@@ -6,42 +6,43 @@
     <title>Instagram Clone</title>
     <link rel="stylesheet" href="styles/style.css" />
   </head>
-<!--
-  
--->
 
   <body>
-    <main>
-      <section>
+    <main class="main">
+      <section class="section-one">
         <img src="images/phones.png" alt="phones" />
       </section>
 
-      <section>
-        <aside>
+      <section class="section-two">
+        <aside id="logoButton">
+
           <img src="images/brand.png" alt="brand"/>
 
           <button type="button">
             <img src="images/home.png" alt="home icon" /><b>Log in</b>
           </button>
-        </aside>
 
-        <aside>
+        </aside>
+        <aside id="content">
+
           <h2>Instagram Capture and Share the World's Moments</h2>
-          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br/>
-            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br/> 
+          <p>Instagram is a <b>fast, beautiful</b> and <b>fun</b> way to share your life with friends and family.<br/><br/>
+            Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.<br/><br/> 
             Oh yeah, did we mention it's free? </p>
-        </aside>
 
-        <aside>
+        </aside>
+        <aside id="badges">
+
           <img src="images/badge-iphone.png" alt="badge phone"/>
           <img src="images/badge-android.png" alt="badge andoid"/>
+
         </aside>
       </section>
     </main>
     
-    <section>
+    <section class="nav-bar">
       <nav>
-        <ul>
+        <ul id="list">
           <li>About Us</li>
           <li>Support</li>
           <li>Blog</li>
@@ -50,10 +51,10 @@
           <li>Jobs </li>
           <li>Privacy</li>
           <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
         </ul>
       </nav>
-
-      <p>&copy; 2014 Instagram</p>
     </section>
+
   </body>
 </html>
