--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
+    
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <header>
+      <section class="blue">
+        <img class="phones" src="/images/phones.png">
+         <img class="brand" src="/images/brand.png" > 
+         <button class="login"><img src="/images/home.png"><p>Log in</p> </button>
+        </section>
+        <section class="font">
+        <div class="text">
+        <h2>Capture and Share <br> the World's Moments</h2>
+        <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun </strong>way to share your life <br>
+          with
+          friends and family.</p>
+          <p> Take a picture or video, choose a filter to transform its look <br> 
+          and feel, then post to Instagram
+          &mdash; it's that easy. You can <br>
+          even share to Facebook, Twitter, Tumblr and more. It's a<br>
+          new way to see the world.</p>
+          <p> Oh yeah, did we mention it's free?</p>
+          <div>
+          <nav class="devices">
+            <img class="iphone" src="/images/badge-iphone.png">
+            <img class="android" src="/images/badge-android.png">
+       </nav>
+      </div>
+      </div>
+    </section>
+  </header>
   </body>
 </html>
