--- a/index.html
+++ b/index.html
@@ -36,4 +36,17 @@
     </section>
   </header>
   </body>
+  <footer>
+    <ul>
+  <li ><a href="#about">About Us</a></li> 
+  <li><a href="#sup"> Support</a> </li>
+  <li><a href="#blog">   Blog </a></li>
+  <li><a href="#press">   Press </a> </li>
+  <li><a href="#api"> API </a></li>
+  <li> <a href="#jobs">  Jobs </a></li>
+  <li><a href="#privacy"> Privacy </a></li>
+  <li><a href="#terms">   Terms </a></li>
+  <li><a href="#terms">&copy; 2014 Instagram</a></li>
+  </ul>
+  </footer>
 </html>
