Finished brach2 styling

--- a/index.html
+++ b/index.html
@@ -7,29 +7,28 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <main class="order">
-      <div><img src="./images/phones.png" alt="Phones"></div>
-      <div>
-        <header class="order">
+    <main>
+      <img src="./images/phones.png" alt="Phones">
+      <div class="about">
+        <header>
           <img src="./images/brand.png" alt="Instagram logo">
           <button><img src="./images/home.png" alt="home icon"><span>Log in</span></button>
         </header>
-        <section>
-          <h1>Capture and Share the World's Moments</h1>
-          <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <section class="info">
+          <h1>Capture and Share<br>the World's Moments</h1>
+          <p>Instagram is a <strong>fast</strong>, <strong>beautiful </strong>and <strong>fun</strong> way to share your life with friends and family.</p>
           <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
           <p>Oh yeah, did we mention it's free?</p>
           <article class="order">
             <img src="./images/badge-iphone.png" alt="Download on the AppStore">
             <img src="./images/badge-android.png" alt="Get it on Google play">
           </article>
-
         </section>
       </div>
     </main>
-    <footer class="order">
+    <footer>
       <nav>
-        <ul class="order">
+        <ul>
           <li>About Us</li>
           <li>Support</li>
           <li>Blog</li>
