--- a/index.html
+++ b/index.html
@@ -5,12 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
     <!-- don't forget to link your styles -->
+    <link rel="stylesheet" type="text/css" href="styles.style.css" />
   </head>
+  
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <main>
+      <div class="container">
+        <div id="phones">
+          <img src="images/phones.png" alt="Instagram Phones" />
+        </div>
+        <div id="text-container">
+          
+          <div id="login">
+            <img src="images/brand.png" alt="Instagram logo" />
+            <button id="login-button" class="button">
+              <img src="images/home.png" alt="home" />
+              <span>Log in</span>
+            </button>
+          </div>
+
+          <div id="text">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+              Instagram is a <b>fast</b>, <b>beautiful</b> and <b>fun</b> way to
+              share your life with friends and family.
+            </p>
+            <p>
+              Take a picture or video, choose a filter to transform its look and
+              feel, then post to Instagram - it's that easy. You can even
+              share to Facebook, Twitter, Tumblr and more. It's a new way to see
+              the world.
+            </p>
+            <p>Oh yeah, did we mention it's free?</p>
+            
+            <div class="badges">
+              <a href="#"
+                ><img
+                  src="images/badge-iphone.png"
+                  alt="Download on the AppStore"
+                  title="Download on the App Store"
+              /></a>
+              <a href="#"
+                ><img
+                  src="images/badge-android.png"
+                  alt="Get it on Google Play"
+                  title="Get it on Google Play"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="clear"></div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="container footer">
+        <ul>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy Terms</a></li>
+          <li>&copy; 2014 Instagram</li>
+        </ul>
+      </div>
+    </footer>
+  
   </body>
 </html>
+
+  
